# sygaldry

./: CLAUDE.md  FULL_MIGRATION_PLAN.md  LICENSE  MIGRATION_CATALOG.md  MIGRATION_COMPLETE.md  MIGRATION_STATUS.md  MIGRATION_V2.md  PR_DESCRIPTION.md  README.md  README_PYPI.md  doppler.yaml  migrate_to_v2.py  pyproject.toml  test_agents.sh  test_integrations.py  test_v2_api.py  verify_syntax.py
.claude/documentation/litellm/: docs.litellm.ai_docs_proxy_server.md
.github/workflows/: pytest.yml
docs/: AGENT_DEPENDENCIES.md  README.md  TEST_STATUS_REPORT.md
examples/: .env.example  AGENT_TESTING_WITH_LOGGING.md  ENV_SETUP_GUIDE.md  INTERACTIVE_TESTING.md  README.md  agent_runner_with_logging.py  agent_testing_notebook.ipynb  hyperliquid_autonomous_trading.py  hyperliquid_interactive_trading.py  hyperliquid_mcp_trading.py  hyperliquid_terminal_trading.py  interactive_agent_tester.py  requirements-interactive.txt  run_scenarios.py  simple_agent_demo.py  test_scenarios.json  view_logs.py
scripts/: fix_agent_schemas.py  guided_agent_fixer.py
sygaldry/: __init__.py
sygaldry/lilypad_compat/: __init__.py  patch.py
tests/: test_hyperliquid_trading.py  test_mcp_integration.py
tests/lilypad_compat/: __init__.py  test_mirascope_v2_compat.py
tests/unit/agents/: test_bug_triage_agent.py  test_code_review_agent.py  test_content_moderation_agent.py  test_contract_analysis_agent.py  test_customer_support_agent.py  test_financial_statement_analyzer.py  test_sentiment_analysis_agent.py  test_task_prioritization_agent.py
tests/unit/tools/: test_github_issues.py  test_helpdesk_integration.py  test_sec_edgar.py  test_static_analysis.py
tests/utils/: mirascope_test_helpers.py
